Add new DTOs for process management and enhance ConcentradoResponseDto; refactor ProcesoPlantaDto and ProcesoMoverDto to include observation fields with size constraints; implement ReporteQuimicoIngenioController and LiquidacionServicioIngenioController for managing chemical reports and service liquidations.